--- a/Sentimental_Analysis_any_approach.ipynb
+++ b/Sentimental_Analysis_any_approach.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKAX26SBgfsnAySh20mak3",
+      "authorship_tag": "ABX9TyMcU/nhOGa1M0c67bPXMRhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,8 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "data = pd.read_csv('train-v2.tsv', delimiter=\"\\t\", header = None, names = ['label', 'sentence'])"
+        "data = pd.read_csv('train.tsv', delimiter=\"\\t\", header = None, names = ['label', 'sentence'])\n",
+        "test_data = pd.read_csv('train.tsv', delimiter=\"\\t\", header = None, names = ['label', 'sentence'])"
       ],
       "metadata": {
         "id": "dCfDxRG8xr2K"
@@ -78,7 +79,7 @@
           "height": 206
         },
         "id": "jFai9U4KD3V3",
-        "outputId": "31563a44-77a9-4498-8378-57007ff290ce"
+        "outputId": "5ed87077-6c2e-4d67-9b7d-4833a9cda407"
       },
       "execution_count": 3,
       "outputs": [
@@ -95,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bdae0d13-e331-4fd8-abf5-56c0c24b945a\">\n",
+              "  <div id=\"df-d5018046-358a-4e75-b8a7-2dce2bd571bf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -148,7 +149,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bdae0d13-e331-4fd8-abf5-56c0c24b945a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d5018046-358a-4e75-b8a7-2dce2bd571bf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -199,12 +200,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bdae0d13-e331-4fd8-abf5-56c0c24b945a button.colab-df-convert');\n",
+              "          document.querySelector('#df-d5018046-358a-4e75-b8a7-2dce2bd571bf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bdae0d13-e331-4fd8-abf5-56c0c24b945a');\n",
+              "          const element = document.querySelector('#df-d5018046-358a-4e75-b8a7-2dce2bd571bf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -295,6 +296,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "X_final_test, y_final_test = test_data['sentence'], test_data['label']"
+      ],
+      "metadata": {
+        "id": "9FFOUzePfhxj"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Splitting the dataset into train, dev and test samples**"
@@ -348,6 +360,22 @@
         "id": "D_y2EY-2Kybk"
       },
       "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = Tokenizer(num_words=50000)\n",
+        "tokenizer.fit_on_texts(X)\n",
+        "\n",
+        "X_tok = tokenizer.texts_to_sequences(X)\n",
+        "#X_dev_tok = tokenizer.texts_to_sequences(X_dev)\n",
+        "X_final_test_tok = tokenizer.texts_to_sequences(X_final_test)"
+      ],
+      "metadata": {
+        "id": "IecIWmNsf4hg"
+      },
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -454,6 +482,23 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "vocab_size = len(tokenizer.word_index) + 1\n",
+        "\n",
+        "maxlen = 100\n",
+        "\n",
+        "X_pad = pad_sequences(X_tok, padding='post', maxlen=maxlen)\n",
+        "#X_dev_pad = pad_sequences(X_dev_tok, padding='post', maxlen=maxlen)\n",
+        "X_final_test_pad = pad_sequences(X_final_test_tok, padding='post', maxlen=maxlen)"
+      ],
+      "metadata": {
+        "id": "fyAy3fvPge-t"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Started with simple neural network which consists of an embedding layer and the dense layer with sigmoid activation and also added a dropout layer because of the overfitting**"
@@ -480,9 +525,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "btOv0dM5OQVy",
-        "outputId": "a642b6c9-bd1f-49f7-9e61-c1e449a2861e"
+        "outputId": "052b1557-45d2-4a7a-9e42-1e1cea03d073"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +537,7 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " embedding (Embedding)       (None, 100, 100)          6124600   \n",
+            " embedding (Embedding)       (None, 100, 100)          7029700   \n",
             "                                                                 \n",
             " dropout (Dropout)           (None, 100, 100)          0         \n",
             "                                                                 \n",
@@ -501,11 +546,39 @@
             " dense (Dense)               (None, 1)                 10001     \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 6,134,601\n",
-            "Trainable params: 6,134,601\n",
+            "Total params: 7,039,701\n",
+            "Trainable params: 7,039,701\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(X_pad, y, batch_size=128, epochs=3, verbose=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vbfIFD_Tgwiq",
+        "outputId": "ef365b52-c450-4502-cbfa-743bb62ca3ed"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n",
+            "615/615 [==============================] - 64s 102ms/step - loss: 0.5652 - acc: 0.7011\n",
+            "Epoch 2/3\n",
+            "615/615 [==============================] - 59s 95ms/step - loss: 0.4248 - acc: 0.8078\n",
+            "Epoch 3/3\n",
+            "615/615 [==============================] - 60s 97ms/step - loss: 0.2949 - acc: 0.8830\n"
           ]
         }
       ]
@@ -541,6 +614,29 @@
     {
       "cell_type": "code",
       "source": [
+        "score = model.evaluate(X_final_test_pad, y_final_test, verbose=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z1QEYF0Cg6ov",
+        "outputId": "e3db347e-1d7e-4c56-8f29-1f03655dd75e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2457/2457 [==============================] - 5s 2ms/step - loss: 0.1839 - acc: 0.9466\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "score = model.evaluate(X_test_pad, y_test, verbose=1)"
       ],
       "metadata": {
@@ -560,6 +656,117 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Test Score:\", score[0])\n",
+        "print(\"Test Accuracy:\", score[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oH5XWY4ShWFi",
+        "outputId": "2e0a8645-4c04-4390-fe76-9df45750694c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Score: 0.18391725420951843\n",
+            "Test Accuracy: 0.9465837478637695\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(score)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VJd8QgDEj36E",
+        "outputId": "06f0c0d1-cea8-4b03-e307-e6516811cd95"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.18391725420951843, 0.9465837478637695]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import metrics\n",
+        "import numpy as np\n",
+        "\n",
+        "y_final_test_predicted_labels = model.predict(X_final_test_pad)\n",
+        "y_final_test_predicted_labels = (y_final_test_predicted_labels > 0.5).astype(int)\n",
+        "\n",
+        "final_test_accuracy = metrics.accuracy_score(y_final_test, y_final_test_predicted_labels)\n",
+        "final_test_precision = metrics.precision_score(y_final_test, y_final_test_predicted_labels, pos_label = 1)\n",
+        "final_test_recall = metrics.recall_score(y_final_test, y_final_test_predicted_labels, pos_label = 1)\n",
+        "final_test_f1score = metrics.f1_score(y_final_test, y_final_test_predicted_labels, pos_label = 1)\n",
+        "final_test_auc_score = metrics.roc_auc_score(y_final_test, y_final_test_predicted_labels)"
+      ],
+      "metadata": {
+        "id": "r4IDrza8jeNz"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(final_test_accuracy)\n",
+        "print(final_test_precision)\n",
+        "print(final_test_recall)\n",
+        "print(final_test_f1score)\n",
+        "print(final_test_auc_score)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Omv4Mq7lna80",
+        "outputId": "8c93d310-8d23-433d-f0df-0d1920efdcc8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9465837245099161\n",
+            "0.9436502323701758\n",
+            "0.9499605888784357\n",
+            "0.9467948961619846\n",
+            "0.9465816182681385\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(\"neural_network_with_regularization.h5\")"
+      ],
+      "metadata": {
+        "id": "SSgQYZNGiOVB"
+      },
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -601,7 +808,7 @@
         "from keras.layers import Conv1D\n",
         "cnn_model = Sequential()\n",
         "\n",
-        "embedding_layer = Embedding(vocab_size, 100, weights=[embedding_matrix], input_length=maxlen , trainable=False)\n",
+        "embedding_layer = Embedding(vocab_size, 100, input_length=maxlen)\n",
         "cnn_model.add(embedding_layer)\n",
         "\n",
         "cnn_model.add(Conv1D(128, 5, activation='relu'))\n",
@@ -735,7 +942,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Used RNN with LSTM(Long short-term memory), with the same embedding layer and activation, but got underfitting, tried by incresing the complexity but the results went down.**"
+        "**Used RNN with LSTM(Long short-term memory), with the same embedding layer and activation, but got under-fitting, tried by incresing the complexity but the results went down.**"
       ],
       "metadata": {
         "id": "oIzahMvqfrPj"
@@ -874,6 +1081,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Need to check with recall, precision and F-1 Score**"
+      ],
+      "metadata": {
+        "id": "ODHjltqHnOEO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Reference: https://stackabuse.com/python-for-nlp-word-embeddings-for-deep-learning-in-keras/** used for embedding layer and tokenization."
+      ],
+      "metadata": {
+        "id": "AbqkWG7BZtd5"
+      }
     },
     {
       "cell_type": "code",
